DTS-36327-GSSO security fixes includes: 1.Remove Auth token from query string. 2.Remove user name paramater from save comment request instead get the user name from  authToken 3.Enable 30 min account lockout on 5 wrong retry.

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.main.allow-bean-definition-overriding=true
 
 #auth keys
 auth.authenticationProviders=SAML,STANDARD
-auth.accountLockedThreshold=3
+auth.accountLockedThreshold=5
 auth.expirationTime=172800000
-
+auth.accountLockedPeriod=30
 #Purpose of properties :secret used for JWT token decode
 #possible values : secret key
 #NeededToUpdate
